background image insert

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Trivia Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,6 +16,22 @@
     <!-- will need containers and bootstrap for timer, questions, answers, wins/losses -->
     <!-- will need buttons for start, reset -->
     <!-- header? footer? -->
+    <header class="container">
+        <div class="row">
+            <div class="col-md-6">Cheese Wiz</div>
+            <div class="col-md-6"></div>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="mainArea col-md-6"></div>
+            <div class="col-md-6"></div>
+        </div>
+    </div>
+
+    <div class="container">
+    </div> 
 
     <script src="assets/javascript/app.js"></script>
 </body>
