working on some styling while i work out some of the programming. Added a header/adjusted the background image color and file size.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- header? footer? -->
     <header class="container">
         <div class="row">
-            <div class="col-md-6">Cheese Wiz</div>
+            <div class="col-md-6" id="cheese">Cheese qWiz</div>
             <div class="col-md-6"></div>
         </div>
     </header>
