--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
    
@@ -23,14 +24,14 @@
 
     <header class="container">
         <div class="row">
-            <div class="col-md-6" id="cheese">Cheese<strong> qWiz</strong></div>
+            <div class="animated fadeInRight delay-0.5s col-md-6" id="cheese">Cheese<strong> qWiz</strong></div>
             <div class="col-md-6"></div>
         </div>
     </header>
 
     <div class="container">
         <div class="row">
-            <div class="mainArea col-md-6"></div>
+            <div class="animated fadeInLeft mainArea delay-1s col-md-6"></div>
             <div class="col-md-6"></div>
         </div>
     </div>
